--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,14 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".Ingreso.view.MainActivity">
+            android:name=".Ingreso.view.MainActivity"
+            android:configChanges="screenSize|orientation"
+            android:windowSoftInputMode="stateHidden">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
 
@@ -27,8 +31,10 @@
             android:configChanges="screenSize|orientation"
             android:windowSoftInputMode="stateHidden"/>
 
-        <activity android:name=".Registro.view.RegisterActivity">
-
+        <activity
+            android:name=".Registro.view.RegisterActivity"
+            android:configChanges="screenSize|orientation"
+            android:windowSoftInputMode="stateHidden">
         </activity>
     </application>
 
